feat: added members name after group name and only members name if no group name

--- a/public/assets/css/entitieslist.css
+++ b/public/assets/css/entitieslist.css
@@ -9,29 +9,32 @@
   --falcon-table-striped-color: #333 !important; */
   --left-nav-width: 55px;
   --left-content-width: 350px;
-  --desktop-left-content-width: calc(var(--left-nav-width) + var(--left-content-width));
+  --desktop-left-content-width: calc(
+    var(--left-nav-width) + var(--left-content-width)
+  );
   --inset-shadow-sm: inset 0 2px 4px rgb(0 0 0 / 0.05);
+  --drop-shadow-md: 0 3px 3px rgb(0 0 0 / 0.12);
   --inbox-header-max-height: 56px;
   --chat-content-header-max-height: 68px;
 }
 
 /* Specific Styles for Item Description and Custom Fields */
-[data-bs-theme='dark'] .item-desc,
-[data-bs-theme='dark'] .custom-fields {
+[data-bs-theme="dark"] .item-desc,
+[data-bs-theme="dark"] .custom-fields {
   border: 1px solid #3c4652;
   background-color: #121e2d;
   color: #f9f9f9;
 }
 
 /* Styles for Placeholders */
-[data-bs-theme='light'] .picture-placeholder,
-[data-bs-theme='light'] .file-container {
+[data-bs-theme="light"] .picture-placeholder,
+[data-bs-theme="light"] .file-container {
   background-color: #f9f9f9;
   color: #333; /* Ensure light mode placeholder text is visible */
 }
 
-[data-bs-theme='dark'] .picture-placeholder,
-[data-bs-theme='dark'] .file-container {
+[data-bs-theme="dark"] .picture-placeholder,
+[data-bs-theme="dark"] .file-container {
   border: 2px dashed #3c4652;
   background-color: #121e2d;
   color: #f9f9f9;
@@ -42,11 +45,11 @@
 /*   border-style: solid; */
 /* } */
 
-[data-bs-theme='dark'] .file-container {
+[data-bs-theme="dark"] .file-container {
   border-style: solid;
 }
 
-[data-bs-theme='dark'] .items-card-text.editable {
+[data-bs-theme="dark"] .items-card-text.editable {
   color: #333;
 }
 
@@ -73,9 +76,16 @@
 .col-1fr-auto {
   grid-template-columns: 1fr auto !important;
 }
+.col-1fr-1fr {
+  grid-template-columns: 1fr 1fr !important;
+}
 
-.row-1fr{
+.row-1fr {
   grid-template-rows: 1fr !important;
+}
+
+.rounded-20px {
+  border-radius: 20px !important;
 }
 
 /*-----------------------------------------------
@@ -226,8 +236,16 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     transition-delay: 0.11s;
   }
 
-  .navbar-toggle.panel-content ~ .page-wrapper > .left-nav-bar ul li:not(:last-child),
-  .navbar-toggle.nav-only ~ .page-wrapper > .left-nav-bar ul li:not(:last-child) {
+  .navbar-toggle.panel-content
+    ~ .page-wrapper
+    > .left-nav-bar
+    ul
+    li:not(:last-child),
+  .navbar-toggle.nav-only
+    ~ .page-wrapper
+    > .left-nav-bar
+    ul
+    li:not(:last-child) {
     transform: translateY(0);
     opacity: 1;
     max-height: 100%;
@@ -237,25 +255,46 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     transition-delay: 0.11s;
   }
 
-  .navbar-toggle.panel-content ~ .page-wrapper > .left-nav-bar > ul li > label > svg,
-  .navbar-toggle.nav-only ~ .page-wrapper > .left-nav-bar > ul li > label > svg {
+  .navbar-toggle.panel-content
+    ~ .page-wrapper
+    > .left-nav-bar
+    > ul
+    li
+    > label
+    > svg,
+  .navbar-toggle.nav-only
+    ~ .page-wrapper
+    > .left-nav-bar
+    > ul
+    li
+    > label
+    > svg {
     transform: rotate(360deg);
   }
 
   /* close state */
-  .navbar-toggle.panel-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse,
+  .navbar-toggle.panel-content
+    ~ .page-wrapper
+    > .left-nav-bar.left-nav-collapse,
   .navbar-toggle ~ .page-wrapper > .left-nav-bar {
     transform: translateX(1.5rem);
     transition-delay: 0.21s;
   }
 
-  .navbar-toggle.panel-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse ul,
+  .navbar-toggle.panel-content
+    ~ .page-wrapper
+    > .left-nav-bar.left-nav-collapse
+    ul,
   .navbar-toggle ~ .page-wrapper > .left-nav-bar ul {
     gap: 0;
     transition-delay: 0s;
   }
 
-  .navbar-toggle.panel-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse ul li:not(:last-child),
+  .navbar-toggle.panel-content
+    ~ .page-wrapper
+    > .left-nav-bar.left-nav-collapse
+    ul
+    li:not(:last-child),
   .navbar-toggle ~ .page-wrapper > .left-nav-bar ul li:not(:last-child) {
     transform: translateY(20px);
     opacity: 0;
@@ -265,7 +304,13 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     transition-delay: 0s;
   }
 
-  .navbar-toggle.panel-content ~ .page-wrapper > .left-nav-bar.left-nav-collapse > ul li > label > svg,
+  .navbar-toggle.panel-content
+    ~ .page-wrapper
+    > .left-nav-bar.left-nav-collapse
+    > ul
+    li
+    > label
+    > svg,
   .navbar-toggle ~ .page-wrapper > .left-nav-bar > ul li > label > svg {
     transform: rotate(180deg);
   }
@@ -352,7 +397,10 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
     max-height: 100%;
     width: 100%;
     height: 100%;
-    transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
+    transition:
+      transform 0.2s ease-in-out,
+      opacity 0.2s ease-in-out,
+      visibility 0.2s ease-in-out;
     /* transition-delay: 50ms; */
   }
 
@@ -361,7 +409,8 @@ layout(float) and is being dependent on top level input(#toggle-navbar) state */
   .left-sidebar-container .inbox-article,
   .left-sidebar-container .settings-article,
   .left-sidebar-container .customize-article {
-    border: var(--falcon-border-width) var(--falcon-border-style) var(--falcon-border-color) !important;
+    border: var(--falcon-border-width) var(--falcon-border-style)
+      var(--falcon-border-color) !important;
     grid-area: 1/1;
     z-index: 1;
     width: 100%;
@@ -669,7 +718,9 @@ section {
   line-height: 1.4;
   padding: 4px 8px;
   border-radius: 6px;
-  transition: background-color 0.3s, box-shadow 0.3s;
+  transition:
+    background-color 0.3s,
+    box-shadow 0.3s;
   cursor: text;
   background-color: #f9f9f9;
 }
@@ -709,7 +760,9 @@ section {
   color: #374151;
   cursor: pointer;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  transition: background-color 0.3s, box-shadow 0.3s;
+  transition:
+    background-color 0.3s,
+    box-shadow 0.3s;
 }
 
 .project-alpha-action-button:hover {
@@ -794,7 +847,9 @@ section {
   border: 1px solid #d1d5db;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
   cursor: pointer;
-  transition: background-color 0.3s, box-shadow 0.3s;
+  transition:
+    background-color 0.3s,
+    box-shadow 0.3s;
   display: none;
 }
 
@@ -826,7 +881,9 @@ section {
   justify-content: center;
   align-items: center;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  transition: background-color 0.3s, box-shadow 0.3s;
+  transition:
+    background-color 0.3s,
+    box-shadow 0.3s;
   position: absolute;
   bottom: 20px; /* Position it at the bottom */
   right: 20px; /* Keep it aligned to the right */
@@ -1102,15 +1159,21 @@ section {
   }
 
   .mobile-stack .accordion-container {
-    transition: min-height 0.15s ease-out, max-height 0.15s ease-out;
+    transition:
+      min-height 0.15s ease-out,
+      max-height 0.15s ease-out;
   }
 
   /* container accordion close */
   .mobile-stack .accordion-container.triggered {
     --accordion-column-to-show: 1;
     --accordion-column-height: 44px;
-    min-height: calc(var(--accordion-column-height) * var(--accordion-column-to-show));
-    max-height: calc(var(--accordion-column-height) * var(--accordion-column-to-show));
+    min-height: calc(
+      var(--accordion-column-height) * var(--accordion-column-to-show)
+    );
+    max-height: calc(
+      var(--accordion-column-height) * var(--accordion-column-to-show)
+    );
     overflow: hidden;
   }
 
@@ -1120,11 +1183,15 @@ section {
     visibility: hidden;
     opacity: 0;
     transition-behavior: allow-discrete;
-    transition: opacity 0.15s ease-out, visibility 0.15s ease-out;
+    transition:
+      opacity 0.15s ease-out,
+      visibility 0.15s ease-out;
   }
 
   .mobile-stack .accordion-container > *:not(:nth-child(1)) {
-    transition: transform 0.15s ease-out, opacity 0.15s ease-out;
+    transition:
+      transform 0.15s ease-out,
+      opacity 0.15s ease-out;
   }
 
   .mobile-stack .accordion-container.triggering > *:not(:nth-child(1)) {
@@ -1153,23 +1220,33 @@ section {
     color: inherit;
   }
 
-  .mobile-stack .accordion-container.triggered .accordion-trigger .accordion-meta,
+  .mobile-stack
+    .accordion-container.triggered
+    .accordion-trigger
+    .accordion-meta,
   .mobile-stack .accordion-container.triggered .accordion-trigger {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
   }
 
-  .mobile-stack .accordion-container.triggered .accordion-trigger .accordion-meta {
+  .mobile-stack
+    .accordion-container.triggered
+    .accordion-trigger
+    .accordion-meta {
     opacity: 1;
     transform: translateY(0);
-    transition: opacity 0.1s ease-in, transform 0.1s ease-in;
+    transition:
+      opacity 0.1s ease-in,
+      transform 0.1s ease-in;
   }
 
   .mobile-stack .accordion-container .accordion-trigger .accordion-meta {
     opacity: 0;
     transform: translateY(10px);
-    transition: opacity 0.1s ease-out, transform 0.1s ease-out;
+    transition:
+      opacity 0.1s ease-out,
+      transform 0.1s ease-out;
   }
 
   /* icon */
@@ -1180,7 +1257,8 @@ section {
   }
 
   .mobile-stack .accordion-container td:has(.accordion-trigger) {
-    border-bottom: var(--falcon-border-width) var(--falcon-border-style) var(--falcon-border-color);
+    border-bottom: var(--falcon-border-width) var(--falcon-border-style)
+      var(--falcon-border-color);
   }
 
   .mobile-stack .accordion-container .accordion-trigger .accor-open {
@@ -1216,7 +1294,9 @@ section {
   justify-content: center;
   align-items: center;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-  transition: background-color 0.3s, box-shadow 0.3s;
+  transition:
+    background-color 0.3s,
+    box-shadow 0.3s;
   border: none;
 }
 
@@ -1309,7 +1389,10 @@ section {
 .pictures-section {
   display: grid;
   width: 100%;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* ensure a responsive design */
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(300px, 1fr)
+  ); /* ensure a responsive design */
   /* max-height: 350px; */
   /* to ensure there is no overflow */
   gap: 32px;
@@ -1356,11 +1439,14 @@ section {
   cursor: pointer;
   border-radius: 4px;
   overflow: hidden;
-  transition: border-color 0.1s ease, background-color 0.1s ease, max-height 0.1s ease;
+  transition:
+    border-color 0.1s ease,
+    background-color 0.1s ease,
+    max-height 0.1s ease;
 }
 
-.picture-placeholder:has(.uploaded-image[data-modular='90']) .uploaded-image,
-.picture-placeholder:has(.uploaded-image[data-modular='270']) .uploaded-image {
+.picture-placeholder:has(.uploaded-image[data-modular="90"]) .uploaded-image,
+.picture-placeholder:has(.uploaded-image[data-modular="270"]) .uploaded-image {
   max-width: 350px;
 }
 
@@ -1377,7 +1463,9 @@ section {
   background-color: inherit; /* git the background from parents instead for dark/light mode */
   border-radius: 4px;
   transform-origin: center;
-  transition: transform 0.2s ease, max-width 0.2s ease;
+  transition:
+    transform 0.2s ease,
+    max-width 0.2s ease;
 }
 
 /* Add hover effect for better user experience */
@@ -1959,17 +2047,20 @@ div.gslide-media.gslide-inline {
 }
 
 @media (max-width: 768px) {
-  [data-bs-theme='light'] .file-container [data-bs-theme='light'] .picture-placeholder:has(img) {
+  [data-bs-theme="light"]
+    .file-container
+    [data-bs-theme="light"]
+    .picture-placeholder:has(img) {
     border-style: solid;
     border-width: 1px;
     /* border-color: #3c465280; */
   }
 
-  [data-bs-theme='light'] .picture-placeholder {
+  [data-bs-theme="light"] .picture-placeholder {
     border-color: transparent;
   }
 
-  [data-bs-theme='dark'] .picture-placeholder {
+  [data-bs-theme="dark"] .picture-placeholder {
     border-style: solid;
     border-width: 1px;
   }
@@ -2006,8 +2097,9 @@ div.gslide-media.gslide-inline {
     min-height: 350px;
   }
 
-  .picture-placeholder:has(.uploaded-image[data-modular='90']) .uploaded-image,
-  .picture-placeholder:has(.uploaded-image[data-modular='270']) .uploaded-image {
+  .picture-placeholder:has(.uploaded-image[data-modular="90"]) .uploaded-image,
+  .picture-placeholder:has(.uploaded-image[data-modular="270"])
+    .uploaded-image {
     /* height: 90%; */
     max-height: 92%;
   }
@@ -2017,7 +2109,9 @@ div.gslide-media.gslide-inline {
   .post1:hover .gallery-menu {
     visibility: visible;
     opacity: 100;
-    transition: visibility 0s linear 0.15s, opacity 0.25s ease-in-out;
+    transition:
+      visibility 0s linear 0.15s,
+      opacity 0.25s ease-in-out;
   }
 }
 
@@ -2030,8 +2124,8 @@ div.gslide-media.gslide-inline {
 
 /* for statuses of invoice */
 /* If data-status="due" */
-[data-status='due'] svg,
-[data-status='due'] p {
+[data-status="due"] svg,
+[data-status="due"] p {
   --falcon-text-opacity: 1;
   color: rgba(var(--falcon-danger-rgb), var(--falcon-text-opacity)) !important;
   /* Add SVG fill */
@@ -2039,8 +2133,8 @@ div.gslide-media.gslide-inline {
 }
 
 /* If data-status="completed" (better than "not-due") */
-[data-status='settled'] svg,
-[data-status='settled'] p {
+[data-status="settled"] svg,
+[data-status="settled"] p {
   --falcon-text-opacity: 1;
   color: rgba(var(--falcon-success-rgb), var(--falcon-text-opacity)) !important;
   /* Add SVG fill */
@@ -2134,7 +2228,11 @@ header first row, contents second row*/
   height: 0 !important; /* so it doesnt interfer with the active panel */
   opacity: 0;
   visibility: hidden;
-  transition: z-index 0.2s ease-in-out, opacity 0.2s ease-in-out, visibility 0.2s ease-in-out, height 0.2s ease-in-out;
+  transition:
+    z-index 0.2s ease-in-out,
+    opacity 0.2s ease-in-out,
+    visibility 0.2s ease-in-out,
+    height 0.2s ease-in-out;
 }
 
 /* core logic for switching the panels*/
@@ -2176,13 +2274,55 @@ which content to show on each sub panel
   grid-area: 1/1;
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
+  transition:
+    opacity 0.2s ease-in-out,
+    visibility 0.2s ease-in-out;
 }
 
 .inbox-active-title {
   opacity: 1;
   visibility: visible;
 }
+
+/* for showing/hiding the search field and its logic*/
+.inbox-active-title > .title {
+  order: 1;
+}
+
+.inbox-active-title > .toggle-label {
+  cursor: pointer;
+  order: 3;
+}
+
+.toggle-label > * {
+  color: var(--falcon-heading-color);
+}
+
+.toggle-search:checked + .toggle-label > * {
+  color: var(--falcon-primary);
+  filter: drop-shadow(var(--drop-shadow-md)); /* 0 3px 3px rgb(0 0 0 / 0.12) */
+}
+
+/* Hide the search box initially */
+.inbox-active-title > .search-field {
+  order: 2;
+  visibility: hidden;
+  opacity: 0;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition:
+    transform 0.2s ease,
+    opacity 0.2s ease,
+    visibility 0.2s ease;
+}
+
+.toggle-search:checked ~ .search-field {
+  visibility: visible;
+  opacity: 1;
+  transform: scaleX(1);
+}
+
+/* show/hiding search field ends here */
 
 .contacts-body h5:hover,
 .contacts-body h5:focus-visible,
@@ -2214,19 +2354,13 @@ which content to show on each sub panel
 }
 
 .inbox-type-email {
-  /* background-color: #e6f2ff; */
-  /*background-color: var(--falcon-btn-falcon-info-color);*/
   color: var(--falcon-btn-falcon-info-color);
 }
 
 .inbox-type-chat {
-  /* background-color: #e6ffe6; */
-  /*background-color: var(--falcon-success);*/
   color: var(--falcon-success);
 }
 .inbox-type-sns {
-  /*background-color: #fff2e6;*/
-  /*color: #fff2e6;*/
   color: var(--falcon-warning);
 }
 
@@ -2245,17 +2379,17 @@ which content to show on each sub panel
 }
 
 /*-------------nav area / inbox list ------------*/
-nav[aria-label='messages inbox'] {
+nav[aria-label="messages inbox"] {
   /* overflow-y: auto; */
   height: 100%;
 }
 
-nav[aria-label='messages inbox'] ul {
+nav[aria-label="messages inbox"] ul {
   display: grid;
   height: 100%;
 }
 
-nav[aria-label='messages inbox'] .inbox-item-container {
+nav[aria-label="messages inbox"] .inbox-item-container {
   /* grid-template-columns: auto 1fr; */
   padding: 1rem;
   align-items: center;
@@ -2263,17 +2397,17 @@ nav[aria-label='messages inbox'] .inbox-item-container {
   justify-content: space-between;
 }
 
-nav[aria-label='messages inbox'] .inbox-item-container .avatar {
+nav[aria-label="messages inbox"] .inbox-item-container .avatar {
   place-self: start;
 }
 
-nav[aria-label='messages inbox'] .inbox-item .inbox-info,
-nav[aria-label='messages inbox'] .inbox-item time {
+nav[aria-label="messages inbox"] .inbox-item .inbox-info,
+nav[aria-label="messages inbox"] .inbox-item time {
   color: var(--falcon-heading-color);
   opacity: 0.85;
 }
 
-nav[aria-label='messages inbox'] .inbox-item .item-subject {
+nav[aria-label="messages inbox"] .inbox-item .item-subject {
   color: var(--falcon-heading-color);
   font-weight: 600;
 }
@@ -2305,6 +2439,19 @@ nav[aria-label='messages inbox'] .inbox-item .item-subject {
 }
 
 /*------ chat panel area---------*/
+
+.chat-group-mem > p:not(:first-child)::before {
+  content: "•";
+  margin: 0 0.2rem;
+}
+/*Overriding the defaults if no group name*/
+.chat-no-group-name > p {
+  font-size: 0.8333rem !important;
+  font-weight: 400;
+  color: var(--falcon-heading-color);
+  font-family: var(--falcon-font-sans-serif);
+}
+
 .chat-container {
   height: calc(100dvh - var(--inbox-header-max-height));
 }
@@ -2347,12 +2494,16 @@ nav[aria-label='messages inbox'] .inbox-item .item-subject {
 
 .chat-content-overrides .chat-content-body .offcanvas {
   position: fixed !important;
-  top: calc(var(--inbox-header-max-height) + var(--chat-content-header-max-height) - 3px);
+  top: calc(
+    var(--inbox-header-max-height) + var(--chat-content-header-max-height) - 3px
+  );
 }
 
 .chat-content-overrides .chat-content-body .offcanvas-backdrop {
   z-index: 1;
-  top: calc(var(--inbox-header-max-height) + var(--chat-content-header-max-height));
+  top: calc(
+    var(--inbox-header-max-height) + var(--chat-content-header-max-height)
+  );
 }
 
 .chat-content-overrides .chat-editor-area .chat-file-upload,
